--- a/microblog/sinatra-rb/views/posts/index.slim
+++ b/microblog/sinatra-rb/views/posts/index.slim
@@ -1,6 +1,6 @@
 h1 = @user[:login]
 h2 Posts:
--if @user[:id] == @current_user[:id]
+-if @current_user and @user[:id] == @current_user[:id] then
   small
     a href='/posts/new' New
 - @posts.each do |post|
